--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,8 @@
     "import/prefer-default-export": "off",
     "react/jsx-one-expression-per-line": "off",
     "react/destructuring-assignment": "off",
-    "max-len": 1,
-    "no-alert": "off"
+    "no-alert": "off",
+    "no-console": "off",
+    "max-len": "off"
   }
 }
